# intro_to_haptics_project

./: .gitignore  CMakeLists.txt  README.md  build.sh
resources/: RR.urdf  world.urdf
scripts/: install.sh
src/trajectory_optimization/: ParametrizedTrajectory.h  TrajectoryOptimizer.h
task1/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt  main.cpp
task3/: CMakeLists.txt  main.cpp
task4/: CMakeLists.txt  main.cpp
task5/: CMakeLists.txt  main.cpp
